@@ -3,11 +3,10 @@
  *   "$Id$";
  */
 
-/*
- * Ban.c
- * Code was grabbed from the netrek source and modified to work with
- * crossfire. This function checks a file in the lib directory for any
- * banned players. If it finds one it returns a 1. Wildcards can be used.
+/**
+ * @file
+ * This code was grabbed from the Netrek source and modified to work with
+ * Crossfire.
  */
 
 #include <global.h>
@@ -26,13 +25,15 @@
 #endif /* win32 */
 
 /**
- * Check if a player and/or host is banned.
+ * Check if a player and/or host is banned. Wildcards can be used.
  *
- * @param login the player name to check; NULL to check only the host name
+ * @param login
+ * player name to check; NULL to check only the host name.
+ * @param host
+ * host name to check.
  *
- * @param host the host name to check
- *
- * @return 1=player/host is banned; 0=player/host is not banned
+ * @return
+ * 1=player/host is banned; 0=player/host is not banned
  */
 int checkbanned(const char *login, const char *host)
 {
